kubernetes/netpol/egress.secure.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-secure
spec:
  podSelector:
   matchLabels:
     app: webapp
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: secure-pod
    ports:
    - protocol: TCP
      port: 80
