kubernetes/netpol/pattern5.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-prod-api-only
spec:
  podSelector:
    matchLabels:
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api
      namespaceSelector:
        matchLabels:
          env: production
    ports:
    - protocol: TCP
      port: 5432
